<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/vendasFragment"
        android:icon="@drawable/ic_vendas"
        android:title="Vendas"/>
    <item
        android:id="@+id/consultasFragment"
        android:icon="@drawable/ic_consultas"
        android:title="Consultas"/>
    <item
        android:id="@+id/balancoCaixaFragment"
        android:icon="@drawable/ic_balance"
        android:title="Balanço"/>
    <item
        android:id="@+id/historicoVendasFragment"
        android:icon="@drawable/ic_historico"
        android:title="Histórico"/>
    <item
        android:id="@+id/configuracoesFragment"
        android:icon="@drawable/ic_settings"
        android:title="Ajustes"/>
</menu>