<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.vendas.VendasFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_clientes"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="8dp"
            android:clipToPadding="false"
            app:layout_constraintTop_toBottomOf="@id/til_busca"
            app:layout_constraintBottom_toBottomOf="parent"
...
