...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPromocao"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    app:icon="@drawable/ic_promotion"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconSize="24dp"
...
